--- a/_assets/scss/_card.scss
+++ b/_assets/scss/_card.scss
@@ -122,6 +122,8 @@ box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
         width: 100%;
         flex-direction: column;
         align-items: center;
+        margin: 0px;
+        margin-top: 2em;
     }
     .container2 .card {
         width: 400px;
