--- a/_assets/scss/_progressBar.scss
+++ b/_assets/scss/_progressBar.scss
@@ -155,6 +155,23 @@ svg circle:nth-child(2) {
     /*!  Ако искам линията която запълша кръга да отговаря на процентитие*/
     stroke: #00ff07;
 }
+@media screen and ( max-width: 918px ){
+    html {
+        overflow-x: hidden;;
+    }
+    .progress {
+        width: 131%;
+    }
+    .container-progress {
+        width: 874px;
+        padding-left: .5em;
+        margin-left: 18em;
+        flex-direction: column;
+    }
+    .text {
+        top: 0em;
+    }
+}
 @media screen and ( max-width: 768px ){
     
     html {
