--- a/_assets/scss/_button.scss
+++ b/_assets/scss/_button.scss
@@ -106,8 +106,12 @@
     }
 }
 @media screen and ( max-width: 375px ){
+    .me {
+        padding: 15px;
+    }
     .btn {
         margin-left: 16em;
+        padding: 15px;
     }
 }
 @media screen and ( max-width: 360px){
