--- a/_assets/scss/_footer.scss
+++ b/_assets/scss/_footer.scss
@@ -2,8 +2,8 @@
   
   
   /* DESKTOP */
-  
-@media all and (max-width: 999999999px) and (min-width: 1340px) {
+  //@media all and (max-width: 999999999px) and (max-width: 1340px)
+  @media all and (max-width: 999999999px) and (min-width: 1340px) {
 
     /* Footer Parent Div Styling */
 
@@ -279,21 +279,19 @@
         padding-top: 10em;
       }
 
-      .section img {
-        border: 2px solid #080000;
-        border-radius: 50px;
-        padding: 9px;
-        width: 2em;
-        margin-left: -1em;
-        
-      }
-      img {
-        border:2px solid rgba(158, 158, 158, 0.4);
-        border-radius: 50px;
-        padding: 15px;
-        width: 32px;
-        height: 32px;
-      }
+    
+
+      .fb 
+    .twitter
+    .insta
+    .pin
+    .google {
+      border:2px solid rgba(158, 158, 158, 0.4);
+      border-radius: 50px;
+      padding: 15px;
+      width: 32px;
+      height: 32px;
+    }
       h3.left {
       
         color: #000;
@@ -314,6 +312,235 @@
           list-style-type: none;
           text-align: left;
       }
+
+      ul {
+        margin: 0;
+        list-style-type: none;
+    }
+
+        li {
+        margin: 0;
+        color: #666666;
+        font-size: 16px;
+        font-weight: 300;
+        line-height: 22px;
+        list-style-type: none;
+        text-align: left;
+    }
+      
+
+    /* Utility Links Div Styling */
+
+    #utility-links {
+
+      width: 50%;
+      height: 150px;
+      //background-image: linear-gradient(to right top, #4288f2, #00acff, #00c8f1, #00dba5, #11e536);
+      margin: 40px auto 0 auto;
+      }
+
+
+    /* Help Styling */
+
+    .help {
+      
+      width: 30%;
+      height: 100px;
+      float: left;
+      margin: 0;
+      /*display: inline-block;*/
+      
+    }
+
+      
+    /* Help Img Icons*/
+
+    .help-img-icon {
+
+      float: left;
+      margin: 0 5px 0 0;
+
+    }
+
+
+    /* About Styling */
+
+
+
+
+    p.deals {
+        
+      font-size: 13px;
+     
+      font-weight: 500; 
+      line-height: 0;
+      text-align: center;
+      
+    } 
+
+      a:link {
+        color: #000;
+        text-decoration: none;
+        
+        font-weight: 500;
+    }
+
+    a:visited {
+        color: #000;
+        text-decoration: none;
+        
+        font-weight: 500;
+    }
+
+
+    a:hover {
+        color: #0677FF;
+        text-decoration: none;
+       
+        font-weight: 500;
+    }
+      
+      
+    a:active {
+      color: #0677FF;
+      text-decoration: none;
+     
+      font-weight: 500;
+    }
+      
+      
+       
+        
+        
+    .section {
+
+      margin-top: 0em;
+      position: relative;
+      left: 13em;
+    
+      img {
+        border:2px solid rgba(158, 158, 158, 0.4);
+        border-radius: 50px;
+        padding: 25px;
+      }
+    }
+
+    h5 {
+    text-align:center;
+    font-family:monospace;
+    }
+
+    h5:before {
+    display: inline-block;
+    margin: 0px 20px 5px 0px;
+    height: 3px;
+    content: " ";
+    text-shadow: none;
+    background-color: #999;
+    width: 140px;
+    }
+
+    h5:after {
+    content:" ";
+    display: inline-block;
+    width:140px;
+    height:3px;
+    background-color:#999;
+    margin:0px 0px 5px 20px;
+    }
+
+    .fb {
+      margin-right:-20px;
+      transition: 1s;
+      position: relative;
+      bottom:0px;
+    }
+
+    .twitter {
+      margin-right: -20px;
+      transition: 1s;
+      position: relative;
+      bottom:0px;
+    }
+
+    .insta {
+      margin-right: -20px;
+      transition: 1s;
+      position: relative;
+      bottom:0px;
+    }
+
+    .pin {
+      margin-right: -20px;
+      transition: 1s;
+      position: relative;
+      bottom:0px;
+    }
+
+    .google {
+      transition: 1s;
+      position: relative;
+      bottom:0px;
+      width: 3em;
+      height: 3em;
+    }
+
+    /* Hover Effects */
+
+    .fb:hover {
+      border-color:rgba(16, 16, 146, 0.57);
+      transition: 1s;
+      background-color:rgba(80, 80, 202, 0.27);
+      box-shadow: 5px 5px 5px rgba(16, 16, 146, 0.57);
+      position: relative;
+      bottom: 20px;
+    }
+
+    .twitter:hover {
+      border-color:#84bad0;
+      transition: 0.75s;
+      background-color:rgba(132, 186, 208, 0.17);
+      box-shadow: 5px 5px 5px #84bad0;
+      position: relative;
+      bottom: 20px;
+    }
+
+    .insta:hover {
+      border-color:rgba(139, 69, 19, 0.74);
+      transition: 0.75s;
+      background-color:rgba(214, 172, 143, 0.79);
+      box-shadow: 5px 5px 5px rgba(139, 69, 19, 0.74);
+      position: relative;
+      bottom: 20px;
+    }
+
+    .pin:hover {
+      border-color:rgba(214, 69, 69, 0.77);
+      transition: 0.75s;
+      background-color:rgba(234, 11, 11, 0.27);
+      box-shadow: 5px 5px 5px rgba(214, 69, 69, 0.77);
+      position: relative;
+      bottom: 20px;
+    }
+
+    .google:hover {
+      border-color:rgb(0, 0, 0);
+      transition: 0.75s;
+      background-color:rgba(37, 36, 36, 0.45);
+      box-shadow: 5px 5px 5px rgb(59, 54, 54);
+      position: relative;
+      bottom: 20px;
+    }
+    .my-number {
+      color: black;
+      font-size: 1.1em;
+    }
+    .site-footer p {
+      padding-top: 3em;
+      text-align: center;
+    }
+      
+      
     }
     /* Responsive */
     
@@ -336,21 +563,32 @@
   .site-footer p {
     margin-left: 5em;
   }
-  .section img {
-    border: 2px solid #080000;
-    border-radius: 50px;
-    padding: 9px;
-    width: 2em;
-    margin-left: -1em;
+  //.section img {
+  //  border: 2px solid #080000;
+  //  border-radius: 50px;
+  //  padding: 9px;
+  //  width: 2em;
+  //  margin-left: -1em;
     
-  }
-  img {
-    border:2px solid rgba(158, 158, 158, 0.4);
-    border-radius: 50px;
-    padding: 15px;
-    width: 32px;
-    height: 32px;
-  }
+  //}
+  //img {
+  //  border:2px solid rgba(158, 158, 158, 0.4);
+  //  border-radius: 50px;
+  //  padding: 15px;
+  //  width: 32px;
+  //  height: 32px;
+  //}
+  .fb 
+    .twitter
+    .insta
+    .pin
+    .google {
+      border:2px solid rgba(158, 158, 158, 0.4);
+      border-radius: 50px;
+      padding: 15px;
+      width: 32px;
+      height: 32px;
+    }
   h3.left {
   
     color: #000;
@@ -371,6 +609,249 @@
       list-style-type: none;
       text-align: left;
   }
+
+  ul {
+    margin: 0;
+    list-style-type: none;
+}
+
+    li {
+    margin: 0;
+    color: #666666;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 22px;
+    list-style-type: none;
+    text-align: left;
+}
+  
+
+/* Utility Links Div Styling */
+#utility-links {
+  
+  width: 90%;
+  height: 150px;
+  background-color:#fff;
+  //margin-top: -14em;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+ 
+    
+}
+
+  .social {
+    position: relative;
+    top: 13em;
+    display: flex;
+    justify-content: flex-start;
+    width: 80%;
+    margin-left: 1em;
+   
+  }
+
+/* Help Styling */
+
+.help {
+  
+  width: 30%;
+  height: 100px;
+  float: left;
+  margin: 0;
+  /*display: inline-block;*/
+  
+}
+
+  
+/* Help Img Icons*/
+
+.help-img-icon {
+
+  float: left;
+  margin: 0 5px 0 0;
+
+}
+
+
+/* About Styling */
+
+
+
+
+p.deals {
+    
+  font-size: 13px;
+ 
+  font-weight: 500; 
+  line-height: 0;
+  text-align: center;
+  
+} 
+
+  a:link {
+    color: #000;
+    text-decoration: none;
+    
+    font-weight: 500;
+}
+
+a:visited {
+    color: #000;
+    text-decoration: none;
+    
+    font-weight: 500;
+}
+
+
+a:hover {
+    color: #0677FF;
+    text-decoration: none;
+   
+    font-weight: 500;
+}
+  
+  
+a:active {
+  color: #0677FF;
+  text-decoration: none;
+ 
+  font-weight: 500;
+}
+  
+  
+   
+    
+    
+.section {
+
+  margin-top: 0em;
+  position: relative;
+  left: 0em;
+
+
+  img {
+    border:2px solid rgba(158, 158, 158, 0.4);
+    border-radius: 50px;
+    padding: 25px;
+  }
+}
+
+h5 {
+text-align:center;
+font-family:monospace;
+}
+
+h5:before {
+display: inline-block;
+margin: 0px 20px 5px 0px;
+height: 3px;
+content: " ";
+text-shadow: none;
+background-color: #999;
+width: 140px;
+}
+
+h5:after {
+content:" ";
+display: inline-block;
+width:140px;
+height:3px;
+background-color:#999;
+margin:0px 0px 5px 20px;
+}
+
+.fb {
+  margin-right:-20px;
+  transition: 1s;
+  position: relative;
+  bottom:0px;
+}
+
+.twitter {
+  margin-right: -20px;
+  transition: 1s;
+  position: relative;
+  bottom:0px;
+}
+
+.insta {
+  margin-right: -20px;
+  transition: 1s;
+  position: relative;
+  bottom:0px;
+}
+
+.pin {
+  margin-right: -20px;
+  transition: 1s;
+  position: relative;
+  bottom:0px;
+}
+
+.google {
+  transition: 1s;
+  position: relative;
+  bottom:0px;
+  width: 3em;
+  height: 3em;
+}
+
+/* Hover Effects */
+
+.fb:hover {
+  border-color:rgba(16, 16, 146, 0.57);
+  transition: 1s;
+  background-color:rgba(80, 80, 202, 0.27);
+  box-shadow: 5px 5px 5px rgba(16, 16, 146, 0.57);
+  position: relative;
+  bottom: 20px;
+}
+
+.twitter:hover {
+  border-color:#84bad0;
+  transition: 0.75s;
+  background-color:rgba(132, 186, 208, 0.17);
+  box-shadow: 5px 5px 5px #84bad0;
+  position: relative;
+  bottom: 20px;
+}
+
+.insta:hover {
+  border-color:rgba(139, 69, 19, 0.74);
+  transition: 0.75s;
+  background-color:rgba(214, 172, 143, 0.79);
+  box-shadow: 5px 5px 5px rgba(139, 69, 19, 0.74);
+  position: relative;
+  bottom: 20px;
+}
+
+.pin:hover {
+  border-color:rgba(214, 69, 69, 0.77);
+  transition: 0.75s;
+  background-color:rgba(234, 11, 11, 0.27);
+  box-shadow: 5px 5px 5px rgba(214, 69, 69, 0.77);
+  position: relative;
+  bottom: 20px;
+}
+
+.google:hover {
+  border-color:rgb(0, 0, 0);
+  transition: 0.75s;
+  background-color:rgba(37, 36, 36, 0.45);
+  box-shadow: 5px 5px 5px rgb(59, 54, 54);
+  position: relative;
+  bottom: 20px;
+}
+.my-number {
+  color: black;
+  font-size: 1.1em;
+}
+.site-footer p {
+  padding-top: 3em;
+  text-align: center;
+}
+  
 }
 /* When screen resolution less than 662px */
 
@@ -380,7 +861,18 @@
     //    margin:250px 0px 0px 80px;
     //}
 
-    img {
+    //img {
+    //  border:2px solid rgba(158, 158, 158, 0.4);
+    //  border-radius: 50px;
+    //  padding: 15px;
+    //  width: 32px;
+    //  height: 32px;
+    //}
+    .fb 
+    .twitter
+    .insta
+    .pin
+    .google {
       border:2px solid rgba(158, 158, 158, 0.4);
       border-radius: 50px;
       padding: 15px;
@@ -437,12 +929,15 @@
   }
 
   .site-footer p {
-    padding-top: 23em;
+    padding-top: 27.8em;
     text-align: center;
     margin-left: 0em;
   }
   .help ul li {
     font-size: 17px;
+  }
+  .help-img-icon {
+    float: none;
   }
 
   #utility-links {
@@ -501,9 +996,9 @@
     padding-left: 3.3em;
     display: flex;
   }
-  .section {
-    margin-left: -3.5em;
-  }
+  //.section {
+  //  margin-left: -3.5em;
+  //}
   .section img {
     padding: 23px;
     width: 30px;
@@ -568,7 +1063,8 @@
     }
   .section{
     width: 100%;
-    margin-right: -7em;
+    margin-top: 18em;
+    //margin-right: -7em;
    
   }
   #utility-links {
@@ -602,9 +1098,9 @@
   .social {
     padding-top: 7em;
   }
-  .section{
-    margin-left: -7em;
-  }
+  //.section{
+  //  margin-left: -7em;
+  //}
     .social img {
       padding: 22px;
       width: 20px;
@@ -704,9 +1200,9 @@
    
   }
 
-  .social {
-    margin-left: 22em;
-  }
+  //.social {
+  //  margin-left: 22em;
+  //}
   
   /* Help Img Icons*/
   
