--- a/_assets/scss/_button.scss
+++ b/_assets/scss/_button.scss
@@ -2,7 +2,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: .5em;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    border-bottom: 2px dotted #0ff;
 }
 
 .btn {
@@ -12,8 +14,6 @@
     border-radius: 2em;
     min-height: 8vh;
     background-color: #0ff;
-
-
 }
 
 .btn-1 {
@@ -26,11 +26,9 @@
     text-decoration: none;
     font-size: 24px;
     overflow: hidden;
-    transition: .2s;
-   
-
+    transition: 0.2s;
 }
-.btn-1:hover{
+.btn-1:hover {
     color: #255784;
     background-color: #2196f3;
     box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #219621;
@@ -38,74 +36,72 @@
     border-radius: 2em;
 }
 
-
-
 .btn-1 span {
     position: absolute;
 }
-.btn-1 span:nth-child(1){
+.btn-1 span:nth-child(1) {
     top: 0;
     left: -100%;
     width: 100%;
     height: 2px;
     background: linear-gradient(90deg, transparent, #219621);
 }
-.btn-1:hover span:nth-child(1){
+.btn-1:hover span:nth-child(1) {
     left: 100%;
     transition: 1s;
 }
-.btn-1 span:nth-child(3){
+.btn-1 span:nth-child(3) {
     bottom: 0;
     right: -100%;
     width: 100%;
     height: 2px;
     background: linear-gradient(270deg, transparent, #219621);
 }
-.btn-1:hover span:nth-child(3){
+.btn-1:hover span:nth-child(3) {
     right: 100%;
     transition: 1s;
-    transition-delay: .5s;
+    transition-delay: 0.5s;
 }
-.btn-1 span:nth-child(2){
+.btn-1 span:nth-child(2) {
     top: -100%;
     right: 0%;
     width: 2px;
     height: 100%;
     background: linear-gradient(180deg, transparent, #219621);
 }
-.btn-1:hover span:nth-child(2){
+.btn-1:hover span:nth-child(2) {
     top: 100%;
     transition: 1s;
-    transition-delay: .25s;
+    transition-delay: 0.25s;
 }
-.btn-1 span:nth-child(4){
+.btn-1 span:nth-child(4) {
     bottom: -100%;
     left: 0%;
     width: 2px;
     height: 100%;
     background: linear-gradient(360deg, transparent, #219621);
 }
-.btn-1:hover span:nth-child(4){
+.btn-1:hover span:nth-child(4) {
     bottom: 100%;
     transition: 1s;
-    transition-delay: .75s;
+    transition-delay: 0.75s;
 }
-@media screen  and ( max-width: 768px ){
+@media screen and (max-width: 768px) {
     .btn {
         margin-left: 9em;
     }
 }
- @media screen and ( max-width: 500px){
+@media screen and (max-width: 500px) {
     .btn {
         margin-left: 0em;
     }
- }
-@media screen and ( max-width: 425px ){
+}
+@media screen and (max-width: 425px) {
     .me {
         margin-right: 5em;
     }
 }
-@media screen and ( max-width: 375px ){
+@media screen and (max-width: 375px) {
     .me {
         padding: 15px;
     }
@@ -114,12 +110,12 @@
         padding: 15px;
     }
 }
-@media screen and ( max-width: 360px){
+@media screen and (max-width: 360px) {
     .me {
         margin-left: 0em;
     }
 }
-@media screen and ( max-width: 320px ){
+@media screen and (max-width: 320px) {
     .btn {
         margin-left: 4em;
     }
