--- a/_assets/scss/site.scss
+++ b/_assets/scss/site.scss
@@ -1,17 +1,17 @@
-@import 'reset';
-/*@import url('typography.css');*/
+@import "reset";
+@import "typography";
+@import "variables";
 
-@import 'layout';
+@import "layout";
 
+@import "button";
+@import "card";
+@import "progressBar";
 
-@import 'button';
-@import 'card';
-@import 'progressBar';
+@import "moto";
 
-@import 'moto';
-
-@import 'navigation';
-@import 'footer';
+@import "navigation";
+@import "footer";
 /*@import url('sections.css');
 
 @import url('elements.css');
