--- a/_assets/scss/_layout.scss
+++ b/_assets/scss/_layout.scss
@@ -1,4 +1,3 @@
-
 //.site-branding h1 {
 //    top: 11%;
 //    right: 37em;
@@ -6,37 +5,36 @@
 
 //}
 
-.container-main{
+.container-main {
     width: 100%;
     height: 100%;
     //z-index: -2;
     background-color: #000;
 }
 
-.container-main::before{
-    content: '';
+.container-main::before {
+    content: "";
     position: absolute;
     top: 1.3em;
     left: 0;
     width: 100%;
-    
+
     height: 100%;
-    
-    background: linear-gradient(to right, #f00, #f00, #0f0, #0FF, #Ff0, #0ff);
+
+    background: linear-gradient(to right, #f00, #f00, #0f0, #0ff, #ff0, #0ff);
     pointer-events: none;
     mix-blend-mode: color;
-
 }
 @-moz-document url-prefix() {
-    .container-main::before{
+    .container-main::before {
         z-index: -1;
-        background: linear-gradient(to right, #f00, #f00, #0f0, #0FF, #Ff0, #0ff);
-     }
-     .container-main{
+        background: linear-gradient(to right, #f00, #f00, #0f0, #0ff, #ff0, #0ff);
+    }
+    .container-main {
         // z-index: -2;
         height: 43em;
-         position: relative;
-     }
+        position: relative;
+    }
 }
 //@supports (-moz-appearance:none) {
 //    .container-main::before{
@@ -45,30 +43,28 @@
 //    .container-main{
 //        position: relative;
 //    }
-   
-   
+
 //}
 video {
     object-fit: cover;
     width: 100%;
-    
-    height: 43em;
+
+    height: auto;
 }
 
-h1
-{
+h1 {
     margin: 0;
     padding: 0;
     position: absolute;
     top: 50%;
-    font-family: 'Permanent Marker', cursive;
+    font-family: "Permanent Marker", cursive;
     width: 100%;
     transform: translateY(-50%);
     text-align: center;
     color: #ddd;
-   
+
     /*font-size: 3em;*/
-    letter-spacing: .2em;
+    letter-spacing: 0.2em;
 }
 h2 {
     margin: 0;
@@ -80,147 +76,122 @@ h2 {
     text-align: center;
     color: #ddd;
     font-size: 3em;
-    letter-spacing: .2em;
+    letter-spacing: 0.2em;
 }
-
 
 h1 span,
 h2 span {
     opacity: 0;
     display: inline-block;
-    animation:  animate 1s linear forwards;
-
+    animation: animate 1s linear forwards;
 }
 
 @keyframes animate {
-    0%{
+    0% {
         opacity: 0;
         transform: rotateY(90deg);
         filter: blur(10px);
     }
-    100%{
+    100% {
         opacity: 1;
         transform: rotateY(0deg);
         filter: blur(0px);
     }
 }
 
-h1 span:nth-child(1){
-
+h1 span:nth-child(1) {
     animation-delay: 2s;
-   
 }
-h1 span:nth-child(2){
-
+h1 span:nth-child(2) {
     animation-delay: 2.5s;
-   
 }
-h1 span:nth-child(3){
-
+h1 span:nth-child(3) {
     animation-delay: 3s;
-   
 }
-h1 span:nth-child(4){
-    
+h1 span:nth-child(4) {
     animation-delay: 3.5s;
-   
 }
-h1 span:nth-child(5){
-    
+h1 span:nth-child(5) {
     animation-delay: 3.75s;
-   
 }
-h1 span:nth-child(6){
-    
+h1 span:nth-child(6) {
     animation-delay: 4s;
-   
 }
-h1 span:nth-child(7){
-    
+h1 span:nth-child(7) {
     animation-delay: 4.5s;
-   
 }
 
-
-h2 span:nth-child(1){
-    
+h2 span:nth-child(1) {
     animation-delay: 2s;
-   
 }
-@media screen and ( width: 1024px){
-    .container-main-main::before{
+@media screen and (width: 1024px) {
+    .container-main-main::before {
         height: 88%;
     }
 }
 
-
-@media screen and ( max-width: 768px) {
-    h1{
-        top: -12em;
+@media screen and (max-width: 768px) {
+    h1 {
+        top: -5em;
         position: relative;
         /*z-index: -1;*/
     }
     h2 {
-        top: -7em;
+        top: -4em;
         position: relative;
         /*z-index: -1;*/
     }
-    .container-main{
+    .container-main {
         width: 131%;
-       
     }
-    .container-main::before{
+    .container-main::before {
         //position: relative;
-        width: 131%;
+        width: 120%;
+        height: 70%;
     }
-    
 }
 
-@media screen and ( max-width: 500px){
+@media screen and (max-width: 500px) {
     html {
-       
         overflow-x: hidden;
     }
-    .container-main{
+    .container-main {
         width: 100%;
-       
     }
-    .container-main::before{
+    .container-main::before {
         width: 104%;
-        //height: 50%;
+        height: 66%;
         //position: relative;
         //left: 9em;
     }
-    .container-main h1{
-        top: -2.5em;
+    .container-main h1 {
+        top: -1em;
         //left: .1em;
         position: relative;
     }
     .container-main h2 {
-        top: -2.6em;
+        top: -1.1em;
         //left: .1em;
         position: relative;
     }
     h1 span,
     h2 span {
-        font-size: .3em;
-       
+        font-size: 0.3em;
     }
-    
 }
-@media screen and ( max-width: 425px){
-    .container-main::before{
+@media screen and (max-width: 425px) {
+    .container-main::before {
         position: absolute;
         //width: 224%;
         height: 100%;
     }
-    
-    .container-main{
+
+    .container-main {
         width: 100%;
     }
 }
-    
-@media screen and ( max-width: 375px ){
+
+@media screen and (max-width: 375px) {
     .container-main h1,
     .container-main h2 {
         font-size: 110px;
@@ -228,41 +199,38 @@ h2 span:nth-child(1){
         top: -3em;
     }
 }
-@media screen and ( max-width: 360px ){
-    
-    body{
-    width: 100%;
-    
-      
+@media screen and (max-width: 360px) {
+    body {
+        display: none;
     }
-    .container-main{
-        
-        width: 131%;
-     
+    .container-main {
+        width: 137%;
     }
-    .container-main::before{
-        width: 240%;
-        top: 6.3em;
+    .container-main::before {
+        width: 180%;
+        //top: 6.3em;
+        height: 80%;
     }
     .container-main h1,
-    .container-main h2{
+    .container-main h2 {
         top: -2em;
-        font-size: 13em;
+        //font-size: 2em;
         //margin-left: -.1em;
     }
 }
 
-@media screen and ( max-width: 320px){
+@media screen and (max-width: 320px) {
     .container-main {
         width: 100%;
     }
-    .container-main h1, .container-main h2 {
+    .container-main h1,
+    .container-main h2 {
         top: -4em;
         font-size: 83px;
         //left: -.3em;
     }
-    
-    .container-main::before{
+
+    .container-main::before {
         width: 100%;
     }
 }
