--- a/_assets/scss/_navigation.scss
+++ b/_assets/scss/_navigation.scss
@@ -1,5 +1,3 @@
-
-
 nav {
     height: 7vh;
     z-index: 9999;
@@ -37,8 +35,7 @@ nav {
     color: lightskyblue;
 }
 
-@media screen and ( max-width: 768px) {
-    
+@media screen and (max-width: 768px) {
     .line {
         width: 30px;
         height: 3px;
@@ -57,23 +54,22 @@ nav {
         right: 7%;
         background-color: greenyellow;
         /*top: 6%;*/
-        
-        margin-top: .5em;
+
+        margin-top: 0.5em;
         transform: translate(-5% -50%);
         z-index: 99999;
     }
-    
+
     @mixin chrome-styles {
-        @media screen and (-webkit-min-device-pixel-ratio:0)
-          and (min-resolution:.001dpcm) {
+        @media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
             @content;
         }
-      }
+    }
     @include chrome-styles {
         .nav-links {
             clip-path: circle(100px at 90% 50%);
             -webkit-clip-path: circle(190px at 90% -10%);
-         
+
             //height: 13vh;
             //width: 100%;
             //height: 100%;
@@ -84,15 +80,15 @@ nav {
             -webkit-clip-path: circle(1500px at 90% -20%);
             height: 138vh;
             width: 100%;
-      }
+        }
     }
     .nav-links {
         position: fixed;
         background-color: #00a8ff;
-      
+
         //height: 110vh;
         width: 100%;
-        
+
         flex-direction: column;
         clip-path: circle(100px at 90% -10%);
         -webkit-clip-path: circle(100px at 90% -10%);
@@ -101,11 +97,8 @@ nav {
         z-index: 1;
     }
     .nav-links.open {
-      
-    
-       
         pointer-events: all;
-    
+
         z-index: 1;
     }
     .landing {
@@ -119,23 +112,22 @@ nav {
     }
     /*! Скороста на показване на всяко меню след като кликнем на burger менюто*/
     .nav-links li:nth-child(1) {
-        transition: all .5s ease .2s;
+        transition: all 0.5s ease 0.2s;
     }
     .nav-links li:nth-child(2) {
-        transition: all .5s ease .4s;
+        transition: all 0.5s ease 0.4s;
     }
     .nav-links li:nth-child(3) {
-        transition: all .5s ease .6s;
+        transition: all 0.5s ease 0.6s;
         padding-bottom: 10em;
     }
     li.fade {
         opacity: 5;
     }
 }
-@media screen and ( max-width: 500px ){
-    
-    nav{
-        width: 30.2em;
+@media screen and (max-width: 500px) {
+    nav {
+        width: 35.2em;
         z-index: 9999;
     }
     h1 {
@@ -154,19 +146,15 @@ nav {
         /* font-size: 2em; */
         font-size: 144px;
     }
-    .hamburger{
-       
+    .hamburger {
         z-index: 99999;
     }
 
-
-
     @mixin chrome-styles {
-        @media screen and (-webkit-min-device-pixel-ratio:0)
-          and (min-resolution:.001dpcm) {
+        @media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
             @content;
         }
-      }
+    }
     @include chrome-styles {
         .nav-links {
             clip-path: circle(100px at 90% -7%);
@@ -175,40 +163,48 @@ nav {
             //width: 100%;
             //height: 100%;
         }
-        .nav-links.open{
-            
+        .nav-links.open {
             clip-path: circle(1000px at 90% -7%);
             -webkit-clip-path: circle(1003px at 98% 20%);
             height: 129vh;
             //width: 100%;
-            background-image: linear-gradient(to left bottom, #d16b6b, #df7853, #df8d35, #cea712, #acc200, #9fd000, #8ddd0a, #73eb21, #95ef2f, #b1f33f, #caf74f, #e0fb5f);
+            background-image: linear-gradient(
+                to left bottom,
+                #d16b6b,
+                #df7853,
+                #df8d35,
+                #cea712,
+                #acc200,
+                #9fd000,
+                #8ddd0a,
+                #73eb21,
+                #95ef2f,
+                #b1f33f,
+                #caf74f,
+                #e0fb5f
+            );
         }
-      }
+    }
 }
 
-@media screen and ( max-width: 500px){
-            @-moz-document url-prefix() {
-                
-            .nav-links{
-                background: none;
-                clip-path: circle(1000px at 90% -7%);
-                clip-path: circle(153px at 90% -10%);
-                height: 130vh;
-            }
-            .nav-links.open{
-                
-                clip-path: circle(200px at 90% -7%);
-                clip-path: circle(2003px at 98% 20%);
-                height: 129vh;
-                //width: 100%;
-               
-            }
-            
+@media screen and (max-width: 500px) {
+    @-moz-document url-prefix() {
+        .nav-links {
+            background: none;
+            clip-path: circle(1000px at 90% -7%);
+            clip-path: circle(153px at 90% -10%);
+            height: 130vh;
         }
+        .nav-links.open {
+            clip-path: circle(200px at 90% -7%);
+            clip-path: circle(2003px at 98% 20%);
+            height: 129vh;
+            //width: 100%;
+        }
+    }
 }
 
-@media screen and ( max-width: 425px){
-    
+@media screen and (max-width: 425px) {
     .site-header {
         background-color: red;
         width: 100.1%;
@@ -216,19 +212,17 @@ nav {
     nav {
         width: 48em;
     }
-    @supports (-moz-appearance:none) {
-        .nav-links{
+    @supports (-moz-appearance: none) {
+        .nav-links {
             //clip-path: circle(1000px at 90% -7%);
             //-webkit-clip-path: circle(100px at 90% -7%);
         }
-       
     }
     @mixin chrome-styles {
-        @media screen and (-webkit-min-device-pixel-ratio:0)
-          and (min-resolution:.001dpcm) {
+        @media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
             @content;
         }
-      }
+    }
     @include chrome-styles {
         .nav-links {
             clip-path: circle(1000px at 90% -7%);
@@ -237,18 +231,15 @@ nav {
             //width: 100%;
             //height: 100%;
         }
-        .nav-links.open{
-            
+        .nav-links.open {
             clip-path: circle(2000px at 90% -7%);
             -webkit-clip-path: circle(2003px at 98% 30%);
             height: 254vh;
             //width: 100%;
             background-color: green;
         }
-      }
-    
-    
-  
+    }
+
     .line {
         width: 60px;
         height: 8px;
@@ -256,14 +247,11 @@ nav {
         margin: 5px;
     }
     .hamburger {
-        
-       margin-top: .5em;
+        margin-top: 0.5em;
     }
 }
-@media screen and ( max-width: 375px ){
-  
+@media screen and (max-width: 375px) {
     .site-header {
-       
         background-color: #00a8ff;
         width: 45.1%;
     }
@@ -275,11 +263,10 @@ nav {
     }
 
     @mixin chrome-styles {
-        @media screen and (-webkit-min-device-pixel-ratio:0)
-          and (min-resolution:.001dpcm) {
+        @media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
             @content;
         }
-      }
+    }
     @include chrome-styles {
         .nav-links {
             clip-path: circle(1000px at 90% -7%);
@@ -288,47 +275,41 @@ nav {
             //width: 100%;
             //height: 100%;
         }
-        .nav-links.open{
-            
+        .nav-links.open {
             clip-path: circle(2000px at 90% -7%);
             -webkit-clip-path: circle(2003px at 98% 20%);
             height: 134vh;
             //width: 100%;
             background-color: green;
         }
-      }
+    }
     .line {
         width: 35px;
         height: 3px;
     }
 }
 
-@media screen and ( max-width: 360px ){
-body {
-    width: 100%;
-}
-    .site-nav-header {
-       
-        background-color: #00a8ff;
-        width: 290%;
-       
-    }
-    nav {
-    
+@media screen and (max-width: 360px) {
+    body {
         width: 100%;
     }
-   
-    
+    .site-nav-header {
+        background-color: #00a8ff;
+        width: 303.7%;
+    }
+    nav {
+        width: 100%;
+    }
+
     .hamburger {
         right: 5%;
     }
 
     @mixin chrome-styles {
-        @media screen and (-webkit-min-device-pixel-ratio:0)
-          and (min-resolution:.001dpcm) {
+        @media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
             @content;
         }
-      }
+    }
     @include chrome-styles {
         .nav-links {
             clip-path: circle(1000px at 90% -9%);
@@ -337,39 +318,35 @@ body {
             width: 100%;
             //height: 100%;
         }
-        .nav-links.open{
-            
+        .nav-links.open {
             clip-path: circle(1000px at 90% -7%);
             -webkit-clip-path: circle(923px at 98% 20%);
             height: 198vh;
             //width: 100%;
             background-color: green;
         }
-      }
-      .nav-links{
-         
+    }
+    .nav-links {
         //  right: 1em;
-      }
+    }
     .line {
         width: 35px;
         height: 3px;
     }
 }
-@media screen and ( max-width: 320px ){
-    
-    nav{
+@media screen and (max-width: 320px) {
+    nav {
         width: 22.2em;
     }
     .hamburger {
         //width: 12em;
-        top: .2em;
-      
-    } @mixin chrome-styles {
-        @media screen and (-webkit-min-device-pixel-ratio:0)
-          and (min-resolution:.001dpcm) {
+        top: 0.2em;
+    }
+    @mixin chrome-styles {
+        @media screen and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
             @content;
         }
-      }
+    }
     @include chrome-styles {
         .nav-links {
             clip-path: circle(1000px at 90% -7%);
@@ -378,14 +355,12 @@ body {
             height: 110vh;
             width: 100%;
         }
-        .nav-links.open{
-            
+        .nav-links.open {
             clip-path: circle(2000px at 90% -7%);
             -webkit-clip-path: circle(1003px at 98% 20%);
             height: 134vh;
             //width: 100%;
             background-color: green;
         }
-      }
-   
+    }
 }
