--- a/_assets/scss/_typography.scss
+++ b/_assets/scss/_typography.scss
@@ -1,21 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
+//@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
 html {
     box-sizing: border-box;
-    font: 14px/1.5 'Permanent Marker', cursive;;
+    font: 14px/1.5 "Permanent Marker", cursive;
 }
 
 @media (min-width: 600px) {
-    html { font-size: 16px; }
+    html {
+        font-size: 16px;
+    }
 }
 
 @media (min-width: 1024px) {
-    html { font-size: 18px; }
+    html {
+        font-size: 13px;
+    }
 }
 
 @media (min-width: 1600px) {
-    html { font-size: 20px; }
+    html {
+        font-size: 20px;
+    }
 }
 
 /*body, table, form, select, option, input, textarea {
@@ -23,30 +28,52 @@ html {
 }*/
 
 .site-title,
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-size: 1em;
     margin-bottom: 0.5em;
     font-weight: normal;
-    font-family: 'Permanent Marker', serif;
+    font-family: var(--layout-font-family);
 }
 
-h1 { font-size: 2.6em; }
-h2 { font-size: 2.0em; }
-h3 { font-size: 1.8em; }
-h4 { font-size: 1.4em; }
-h5 { font-size: 1.2em; }
-h6 { font-size: 1em; }
+h1 {
+    font-size: 2.6em;
+}
+h2 {
+    font-size: 2em;
+}
+h3 {
+    font-size: 1.8em;
+}
+h4 {
+    font-size: 1.4em;
+}
+h5 {
+    font-size: 1.2em;
+}
+h6 {
+    font-size: 1em;
+}
 
-
-p, ul, ol {
+p,
+ul,
+ol {
     padding-bottom: 1.5em;
 }
 
-ul, ol {
+ul,
+ol {
     padding-left: 2em;
 }
 
-ul ul, ol ul, ul ol, ol ol {
+ul ul,
+ol ul,
+ul ol,
+ol ol {
     padding-top: 0.5em;
     padding-bottom: 0.5em;
 }
@@ -54,7 +81,6 @@ ul ul, ol ul, ul ol, ol ol {
 ol > li > ol > li {
     list-style-type: lower-roman;
 }
-
 
 blockquote {
     padding: 1rem;
@@ -68,6 +94,6 @@ blockquote .author {
 
 blockquote .author:before {
     display: inline-block;
-    content: '\2014';
+    content: "\2014";
     padding-right: 0.5em;
 }
