--- a/_assets/scss/_variables.scss
+++ b/_assets/scss/_variables.scss
@@ -5,7 +5,8 @@
     --font-size-body-huge: 20px;
 
     --layout-main-width: 60em;
-    //--layout-font-family: "Permanent Marker", serif;
+    --layout-font-family: 'Montserrat', sans-serif;
+    --layout-my-name: 'Permanent Marker', cursive;
     --color-body-text: #000;
     --color-body-bgrd: #fff;
     --color-link-default: #369;
