--- a/_assets/scss/_card.scss
+++ b/_assets/scss/_card.scss
@@ -1,5 +1,3 @@
-
-
 .container2 {
     position: relative;
     width: 1000px;
@@ -10,9 +8,6 @@
     top: 4em;
     padding-bottom: 3em;
 }
-
-
-
 
 .container2 .card {
     position: relative;
@@ -29,39 +24,67 @@
     left: 0;
     width: 106%;
     height: 100%;
-    
-    -webkit-box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
--moz-box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
-box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
+
+    -webkit-box-shadow: 9px 9px 25px 6px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 9px 9px 25px 6px rgba(0, 0, 0, 0.75);
+    box-shadow: 9px 9px 25px 6px rgba(0, 0, 0, 0.75);
     z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    transition: .5s ease-in-out;
+    transition: 0.5s ease-in-out;
 }
 
 .bgr-1 {
-    background: rgba(255,146,10,1);
+    background: rgba(255, 146, 10, 1);
 }
 .bgr-2 {
-    background: rgba(84,255,82,1);
+    background: rgba(84, 255, 82, 1);
 }
 .bgr-3 {
-    background-color: rgba(169,3,41,1);
+    background-color: rgba(169, 3, 41, 1);
 }
 .bgr-4 {
-    background-image: linear-gradient(to right top, #e5ccda, #decae2, #d0cbea, #bcccf0, #a4cff1, #96d3f3, #87d8f2, #7adcee, #71e4f1, #69ecf3, #62f3f3, #5ffbf1);
+    background-image: linear-gradient(
+        to right top,
+        #e5ccda,
+        #decae2,
+        #d0cbea,
+        #bcccf0,
+        #a4cff1,
+        #96d3f3,
+        #87d8f2,
+        #7adcee,
+        #71e4f1,
+        #69ecf3,
+        #62f3f3,
+        #5ffbf1
+    );
 }
-.bgr-5{
-    background-image: linear-gradient(to right top, #0342d1, #7045ca, #9b4dc2, #ba5abb, #d16bb6, #e372ad, #f17ca6, #fb889f, #ff8e8e, #ff977c, #ffa26c, #fbb05f);
+.bgr-5 {
+    background-image: linear-gradient(
+        to right top,
+        #0342d1,
+        #7045ca,
+        #9b4dc2,
+        #ba5abb,
+        #d16bb6,
+        #e372ad,
+        #f17ca6,
+        #fb889f,
+        #ff8e8e,
+        #ff977c,
+        #ffa26c,
+        #fbb05f
+    );
 }
 .container2 .card:hover .imgBx {
     width: 150px;
     height: 150px;
-    left: -75px;
+    left: -83px;
     top: calc(50% - 75px);
-    transition: .5s ease-in-out;
+    transition: 0.5s ease-in-out;
     background-color: #3498db;
 }
 
@@ -74,15 +97,15 @@ box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
     text-align: center;
     font-size: 1.5em;
     //text-transform: uppercase;
-	background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent;
+    background: linear-gradient(to right, #30cfd0 0%, #330867 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-weight: 700;
 }
 
 .container2 .card .imgBx img {
     max-width: 169px;
-    transition: .5s ease-in-out;
+    transition: 0.5s ease-in-out;
 }
 
 .container2 .card:hover .imgBx img {
@@ -114,12 +137,12 @@ box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
     text-decoration: none;
     color: #fff;
 }
-@media screen and ( width: 1024px ){
-    .container2 .card:hover .imgBx{
+@media screen and (width: 1024px) {
+    .container2 .card:hover .imgBx {
         left: -105px;
     }
 }
-@media screen and ( max-width: 992px) {
+@media screen and (max-width: 992px) {
     nav {
         width: 100%;
     }
@@ -133,17 +156,15 @@ box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
     .container2 .card {
         width: 400px;
     }
-    
 }
-@media screen and ( max-width: 768px ){
+@media screen and (max-width: 768px) {
     .container2 {
-        
-       margin-left: 1em;
+        margin-left: 1em;
     }
-    .container2 .card .imgBx{
+    .container2 .card .imgBx {
         width: 140%;
     }
-    .container2 .card .imgBx img{
+    .container2 .card .imgBx img {
         max-width: 384px;
     }
     .card-images {
@@ -152,10 +173,8 @@ box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
     }
 }
 
-
-@media screen and ( max-width: 500px ){
-    
-    .container2{
+@media screen and (max-width: 500px) {
+    .container2 {
         z-index: 0;
         width: 65%;
         margin: 9px;
@@ -177,44 +196,39 @@ box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
         left: -47px;
     }
 }
-@media screen and ( max-width: 425px ){
+@media screen and (max-width: 425px) {
     .container2 {
-    
         width: 113%;
         margin-left: 13em;
     }
 }
-@media screen and ( max-width: 375px){
-    .container2{
+@media screen and (max-width: 375px) {
+    .container2 {
         width: 90%;
-      margin-left: 0;
-       
+        margin-left: 0;
     }
     .container2 .card {
         width: 348px;
         margin-right: 0em;
-        
     }
     .container2 .card .imgBx {
         width: 116%;
-        
     }
 }
-@media screen and ( max-width: 360px){
+@media screen and (max-width: 360px) {
     .container2 {
         width: 80%;
         margin-left: 10em;
     }
 }
 
-@media screen and ( max-width: 320px) {
+@media screen and (max-width: 320px) {
     .nav-links {
-        
     }
 
-    .container2{
-    //   background-color: red;
-       width: 100%;
+    .container2 {
+        //   background-color: red;
+        width: 100%;
         margin: 0px;
     }
     .container2 .card {
@@ -223,18 +237,16 @@ box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
         height: auto;
     }
     .container2 .card .imgBx {
-        
         position: relative;
     }
     .container2 .card .imgBx,
     .container2 .card:hover .imgBx {
         width: 319px;
         height: 204px;
-        
     }
-    .container2 .card:hover .imgBx{
+    .container2 .card:hover .imgBx {
         top: calc(50% - 75px);
-        transition: .5s ease-in-out;
+        transition: 0.5s ease-in-out;
         background-color: #3498db;
         left: -21em;
     }
@@ -248,6 +260,4 @@ box-shadow: 9px 9px 25px 6px rgba(0,0,0,0.75);
         top: -10em;
         left: 0em;
     }
-
-    
 }
