--- a/_assets/scss/_moto.scss
+++ b/_assets/scss/_moto.scss
@@ -23,6 +23,7 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 3em;
+    padding-top: 1em;
     width: 60%;
 }
 .motto-git img {
