--- a/_assets/scss/_typography.scss
+++ b/_assets/scss/_typography.scss
@@ -1,8 +1,10 @@
-//@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500;1,600;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,500;1,600;1,800;1,900&family=Permanent+Marker&display=swap');
 
 html {
     box-sizing: border-box;
-    font: 14px/1.5 "Permanent Marker", cursive;
+    font: 14px/1.5 var(--layout-font-family), cursive;
 }
 
 @media (min-width: 600px) {
@@ -43,18 +45,23 @@ h6 {
 h1 {
     font-size: 2.6em;
 }
+
 h2 {
     font-size: 2em;
 }
+
 h3 {
     font-size: 1.8em;
 }
+
 h4 {
     font-size: 1.4em;
 }
+
 h5 {
     font-size: 1.2em;
 }
+
 h6 {
     font-size: 1em;
 }
@@ -78,7 +85,7 @@ ol ol {
     padding-bottom: 0.5em;
 }
 
-ol > li > ol > li {
+ol>li>ol>li {
     list-style-type: lower-roman;
 }
 
